--- a/src/styles/post.module.css
+++ b/src/styles/post.module.css
@@ -1,6 +1,6 @@
 @font-face {
-    font-family: "ketta";
-    src: url("../assets/Fonts/HelloKetta-d99oX.ttf");
+    font-family: "Bucklane";
+    src: url("../assets/Fonts/BucklaneScriptPERSONALUSE-Regular.ttf");
 }
 
 *{
@@ -50,6 +50,7 @@
 .header h1{
     margin-bottom: 0;
     font-size: 2rem;
+    font-family: "Bucklane";
 }
 
 .header p{
@@ -67,9 +68,11 @@
     background: #9b9a9a;
     border-radius: 15px;
     margin-top: 35vh;
+    font-size: 1rem;
     position: relative;
     transition: all 0.8s ease;
 }
+
 
 .body form{
     height: auto;
@@ -86,7 +89,7 @@
     width: 80%;
     padding: 1rem;
     border-radius: 20px;
-    font-family: "ketta";
+    font-family: "semiflora";
     font-size: 1.5rem;
     letter-spacing: 0.8px;
 }
@@ -117,8 +120,7 @@
 
 .body p{
     text-align: justify;
-    font-family: "ketta";
-    font-size: 1.5rem;
+    font-size: 1rem;
     letter-spacing: 0.8px;
 }
 
